--- a/SG_Bank.BLL/SG_Bank.BLL.csproj
+++ b/SG_Bank.BLL/SG_Bank.BLL.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,6 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountManager.cs" />
+    <Compile Include="AccountManagerFactory.cs" />
+    <Compile Include="DepositRules\DepositRulesFactory.cs" />
+    <Compile Include="DepositRules\FreeAccountDepositRule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
