--- a/SG_Bank.Models/SG_Bank.Models.csproj
+++ b/SG_Bank.Models/SG_Bank.Models.csproj
@@ -44,7 +44,9 @@
     <Compile Include="Account.cs" />
     <Compile Include="AccountType.cs" />
     <Compile Include="Interfaces\IAccountRepository.cs" />
+    <Compile Include="Interfaces\IDeposit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responses\AccountDepositResponse.cs" />
     <Compile Include="Responses\AccountLookupResponse.cs" />
     <Compile Include="Responses\Response.cs" />
   </ItemGroup>
