--- a/SG_Bank.BLL/SG_Bank.BLL.csproj
+++ b/SG_Bank.BLL/SG_Bank.BLL.csproj
@@ -47,6 +47,8 @@
     <Compile Include="DepositRules\DepositRulesFactory.cs" />
     <Compile Include="DepositRules\FreeAccountDepositRule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WithdrawRules\FreeAccountWithdrawlRule.cs" />
+    <Compile Include="WithdrawRules\WithdrawRulesFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SG_Bank.Data\SG_Bank.Data.csproj">
