--- a/SG_Bank.BLL/SG_Bank.BLL.csproj
+++ b/SG_Bank.BLL/SG_Bank.BLL.csproj
@@ -47,7 +47,7 @@
     <Compile Include="DepositRules\DepositRulesFactory.cs" />
     <Compile Include="DepositRules\FreeAccountDepositRule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WithdrawRules\FreeAccountWithdrawlRule.cs" />
+    <Compile Include="WithdrawRules\FreeAccountWithdrawRule.cs" />
     <Compile Include="WithdrawRules\WithdrawRulesFactory.cs" />
   </ItemGroup>
   <ItemGroup>
