--- a/SG_Bank.Data/SG_Bank.Data.csproj
+++ b/SG_Bank.Data/SG_Bank.Data.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicAccountTestRepository.cs" />
+    <Compile Include="FileAccountRepository.cs" />
     <Compile Include="FreeAccountTestRepository.cs" />
+    <Compile Include="PremiumAccountTestRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
